@@ -1,6 +1,37 @@
 TODO list and scratch pad for Structure Synth. /Mikael
 
-TODO: Fast draw button. Fast draw doesn't work for white background...
+TODO: 
+- Fast draw button. Fast draw doesn't work for white background...
+- Add 'Grid' to templates... (or continue when missing...)
+- OpenGL infotext has fixed color
+- Add 'fov' 'aspect' 'xsize,ysize' to begin template.
+- Show hour-glass when making long operations (before progress when rendering...)    
+
+Request:
+- Remember file extension.
+
+Template Rendering Dialog:
+
+
+Choose Template:
+[Sunflow.template] [<]
+
+(o) Render to file: [c:\testmig.es] [File...]
+( ) Render to clipboard:
+
+Output Size:
+X: 640 Y: 400. [x] Lock Aspect
+
+[x] Modify Template before applying:
+(changes to template are not saved on disk)
+
+[x] Modify Output before saving
+
+
+
+
+
+
 
 Make Debug moc'ing on release...
 
